--- a/sass/components/_type.scss
+++ b/sass/components/_type.scss
@@ -2,7 +2,8 @@
     display: flex;
     justify-content: space-between;
     gap: 15px;
-    margin-top: 30px;
+    margin-top: 5px;
+    margin-bottom: 35px;
 
     &__item {
 
